# AWS-CDK-Learning

./: .gitignore  README.md
.github/workflows/: README.md  _cdk.yml  ci.yml  deploy.yml
apps/employee_directory/: README.md  app.py  pyproject.toml  requirements-dev.txt
apps/employee_directory/config/: app.yaml  compute_flask.yaml  config_loader.py  iam.yaml  lambdas.yaml  s3.yaml  ssm_paths.py
apps/employee_directory/employee_directory/: config_loader.py
apps/employee_directory/employee_directory/constructs/: configurable_ec2_flask_instance.py  configurable_iam_role.py  configurable_lambda.py  configurable_s3.py
apps/employee_directory/employee_directory/models/: compute_flask_config.py  iam_config.py  lambda_config.py  s3_config.py
apps/employee_directory/employee_directory/src/lambdas/ec2_kill_switch/: handler.py
apps/employee_directory/employee_directory/stacks/: compute_stack.py  iam_stack.py  lambda_stack.py  s3_stack.py
employee_directory_app/: app.py  cdk.context.json
employee_directory_app/.github/workflows/: deploy.yml
employee_directory_app/employee_directory_app/: employee_directory_app_stack.py
employee_directory_app/employee_directory_app/stacks/: compute_stack.py  data_stack.py  iam_stack.py
employee_directory_app/tests/unit/: test_employee_directory_app_stack.py
